--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "carlonicora/minimalism-service-firebase",
   "description": "Firebase service for minimalism",
-  "version": "1.0.0",
+  "version": "2.0.0-beta1",
   "homepage": "https://carlonicora.com",
   "time": "2020-04-05",
   "license": "MIT",
@@ -17,13 +17,13 @@
   ],
   "autoload": {
     "psr-4": {
-      "carlonicora\\minimalism\\services\\firebase\\":"src/"
+      "CarloNicora\\Minimalism\\Services\\Firebase\\":"src/"
     }
   },
   "require": {
     "php": "^7.4",
     "ext-curl": "*",
     "ext-json": "*",
-    "carlonicora/minimalism": "~10.0"
+    "carlonicora/minimalism": "~11.0"
   }
 }
