--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -3,7 +3,13 @@ version: '3.7'
 services:
   minimalism-service-firebase:
     container_name: minimalism-service-firebase
-    image: carlonicora/php-cli-base:7.4.3.2
+    image: carlonicora/minimalism-service-firebase:2.0
+    build:
+      context: .
+      dockerfile: ./php-cli/Dockerfile
+      args:
+        - XDEBUG_HOST=${XDEBUG_HOST}
+        - XDEBUG_PORT=${XDEBUG_PORT}
     working_dir: /app
     volumes:
       - ../:/app
