--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "carlonicora/minimalism-service-firebase",
   "description": "Firebase service for minimalism",
-  "version": "2.0.0-beta3",
+  "version": "2.0.0",
   "homepage": "https://carlonicora.com",
   "time": "2020-04-05",
   "license": "MIT",
@@ -11,7 +11,7 @@
     {
       "name": "Carlo Nicora",
       "email": "carlo@carlonicora.com",
-      "homepage": "http://carlonicora.com",
+      "homepage": "https://carlonicora.com",
       "role": "Developer"
     }
   ],
@@ -21,9 +21,9 @@
     }
   },
   "require": {
-    "php": "^7.4",
+    "php": ">=8.1",
     "ext-curl": "*",
     "ext-json": "*",
-    "carlonicora/minimalism": "~11.0"
+    "carlonicora/minimalism": "~13.0"
   }
 }
